--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <a class="nav-link" href="about.html">About</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">contact</a>
+                            <a class="nav-link" href="#">contacts</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" href="cart.html">cart</a>
