--- a/cart.html
+++ b/cart.html
@@ -41,197 +41,39 @@
     <body>
          <!--header starts-->
     <section class="head-section fixed-top">
-        <!--top nav-->
-        <div class="container">
-            <div class="top-nav">
-                <div class="row">
-                    <div
-                        class="col-md-3 d-flex justify-content-center justify-content-md-start align-items-center logo-area p-2">
-                        <img src="imgs/LOGO2.jpg" alt="" srcset="" class="img-fluid" width="50"><b>CHAKSTORES</b>
-                    </div>
-                    <div class="col-md-6 d-flex justify-content-center align-items-center search-area">
-                        <form action="" class="search-form">
-                            <div class="form-group d-flex">
-                                <input type="text" class="form-control" placeholder="Search item">
-
-                                <button class="form-control search-btn"><i class="fa fa-search"></i></button>
-                            </div>
-                        </form>
-
-
-                    </div>
-                    <div class="col-md-3 cart-area">
-
-                        <a href="log-in.html">LOGIN</a>
-                        <a href="register.html">REGISTER</a>
-                        <a href="log-in.html"><i class="fa fa-shopping-cart"></i>CART</a>
-
-                    </div>
+        <!--main nav-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light py-4">
+            <div class="container">
+                <a class="navbar-brand" href="#">ChackStores</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">  
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="products.html">products</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="about.html">About</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link active" href="cart.html">cart</a>
+                          </li>
+                          <input type="search" class="form-control me-3" placeholder="Search Product..." aria-label="Search">
+                          
+                    </ul>
+                    <a href="log-in.html" class="btn btn-primary me-3 login px-4 py-2">Login</a>
+                    <a href="register.html" class="btn btn-primary Sign-up px-4 py-2">Sign up</a>
+                    
                 </div>
             </div>
-
-        </div>
-        <!--top nav ends-->
-        </div>
-
-        <!--main nav-->
-        <div class="row-fluid
-            ">
-            <div class="main-nav mt-md-2">
-                <nav class="navbar navbar-expand-lg navbar-light ">
-                    <div class="container-fluid">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <h2 class="text uppercase">menu</h2>
-                            <span class="navbar-toggler-icon"></span>
-
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="products.html">products</a>
-                                </li>
-
-                                <li class="nav-item dropdown has-megamenu">
-                                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
-                                        categories
-                                    </a>
-                                    <div class="dropdown-menu megamenu text-center m-lg-auto p-4" role="menu">
-                                        <div class="row g-3">
-                                            <div class="col-lg-3 col-6">
-                                                <div class="col-megamenu">
-                                                    <h6 class="title text-uppercase">category title</h6>
-                                                    <ul class="list-unstyled">
-                                                        <li>
-                                                            <a href="product-details.html">Product 1</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="product-details.html">Product 2</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="product-details.html">Product 3</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="product-details.html">Product 4</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="product-details.html">Product 5</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="product-details.html">Product 6</a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                                <!-- col-megamenu.// -->
-                                            </div>
-                                            <!-- end col-3 -->
-                                            <div class="col-lg-3 col-6">
-                                                <div class="col-megamenu">
-                                                    <h6 class="title text-uppercase">category title</h6>
-                                                    <ul class="list-unstyled">
-                                                        <li>
-                                                            <a href="product-details.html">Product 1</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="product-details.html">Product 2</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="product-details.html">Product 3</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="product-details.html">Product 4</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="product-details.html">Product 5</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="product-details.html">Product 6</a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                                <!-- col-megamenu.// -->
-                                            </div>
-                                            <!-- end col-3 -->
-                                            <div class="col-lg-3 col-6">
-                                                <div class="col-megamenu">
-                                                    <h6 class="title text-uppercase">category title</h6>
-                                                    <ul class="list-unstyled">
-                                                        <li>
-                                                            <a href="product-details.html">Product 1</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="product-details.html">Product 2</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="product-details.html">Product 3</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="product-details.html">Product 4</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="product-details.html">Product 5</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="product-details.html">Product 6</a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                                <!-- col-megamenu.// -->
-                                            </div>
-                                            <div class="col-lg-3 col-6">
-                                                <div class="col-megamenu">
-                                                    <h6 class="title text-uppercase bold">category title</h6>
-                                                    <ul class="list-unstyled">
-                                                        <li>
-                                                            <a href="product-details.html">Product 1</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="product-details.html">Product 2</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="product-details.html">Product 3</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="product-details.html">Product 4</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="product-details.html">Product 5</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="product-details.html">Product 6</a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                                <!-- col-megamenu.// -->
-                                            </div>
-                                            <!-- end col-3 -->
-                                        </div>
-                                        <!-- end row -->
-                                    </div>
-                                    <!-- dropdown-mega-menu.// -->
-
-                                </li>
-
-                                <li class="nav-item">
-                                    <a class="nav-link" aria-current="page" href="#">feature</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" aria-current="page" href="about.html">about us</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
-
-            </div>
-        </div>
+        </nav>
         <!--main nav ends-->
     </section>
-     <!--header ends-->
+<!--header ends-->
 <section class="cart">
     <div class="container">
         <h3 class="heading">my cart </h3> <span class="count-items">2</span>
