--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!--main nav-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light py-4">
             <div class="container">
-                <a class="navbar-brand" href="#">ChackStore</a>
+                <a class="navbar-brand" href="#">ChackStores</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
